syntax = "proto3";
package stridelabs.stride.icacallbacks;

option go_package = "github.com/Stride-Labs/stride/x/icacallbacks/types";

message CallbackData {
  string callbackKey = 1; 
  string portId = 2; 
  string channelId = 3; 
  uint64 sequence = 4; 
  string callbackId = 5; 
  bytes callbackArgs = 6; 
}

